<resources>
    <string name="app_name">WePost</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add Post</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_story">Create a Story</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="photos">Photos</string>
    <string name="my_followers">My Followers</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="keep_connected_with_friends">Keep Connected with Friends</string>
    <string name="welcome_to_wepost">Welcome to WePost</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="login">LogIn</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="log_in">Log In</string>
    <string name="users">Users</string>
</resources>